Rolled back Chart.js from v2 to v1 at least for the time being, since v2 just wouldn't render (need further debugging).

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,8 @@
     "ecmaVersion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true,
-    },
+      "jsx": true
+    }
   },
   "env": {
     "node": true,
@@ -93,7 +93,7 @@
     "no-implicit-coercion": [2, {
         "boolean": false,
         "number": true,
-        "string": true,
+        "string": true
     }],
     // disallow use of eval()-like methods
     "no-implied-eval": 1,
