--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-eslint": "^10.1.0",
     "babel-polyfill": "^6.26.0",
     "bluebird": "^3.7.2",
-    "chart.js": "^2.9.4",
+    "chart.js": "^1.1.1",
     "classnames": "2.2.5",
     "copy-webpack-plugin": "4.2.0",
     "core-js": "^3.8.0",
@@ -57,7 +57,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-autosuggest": "^9.3.2",
-    "react-chartjs-2": "^2.11.1",
+    "react-chartjs": "^1.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-document-title": "^2.0.3",
     "react-helmet": "^5.1.3",
