Upgrading Gatsby to v2 (#198)
* This initial commit mainly upgrades the dependencies and fixes any immediate errors. The site now comes up with Gatsby 2, but the layout is broken as expected. Refactoring layout components is next: https://www.gatsbyjs.com/docs/migrating-from-v1-to-v2/#remove-or-refactor-layout-components

* Introduced `gatsby-plugin-layout` to restore support for v1 Layouts (at least for now); fixed `raw loader` usage and eliminated React.PropTypes. Home page comes up with styles now.

* Fixed API_LINK & API_NAME exports in api.jsx

* Replaced `react-highlight` (no longer maintained) with `react-highlight.js`.

* Rolled back Chart.js from v2 to v1 at least for the time being, since v2 just wouldn't render (need further debugging).

* Fixed ESLint configuration.

* Added `static` to defaultProps declaration.

* Additional fixes.

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,8 +4,8 @@
     "ecmaVersion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true,
-    },
+      "jsx": true
+    }
   },
   "env": {
     "node": true,
@@ -17,11 +17,8 @@
   },
   "globals": {
     "assert": true,
-    "goog": 1,
-    "__DEV__" : 1,
-    "object": 1,
-    "React.Element": {},
-    "ReactClass": {},
+    "__DEV__" : true,
+    "object": true,
     "app": true,
     "iod": true,
     "React": true,
@@ -93,7 +90,7 @@
     "no-implicit-coercion": [2, {
         "boolean": false,
         "number": true,
-        "string": true,
+        "string": true
     }],
     // disallow use of eval()-like methods
     "no-implied-eval": 1,
@@ -225,11 +222,11 @@
     // Prevent usage of unknown DOM property
     "react/no-unknown-property": 1,
     // Restrict file extensions that may be required
-    "react/require-extension": 1,
+    "react/jsx-filename-extension": 1,
     // Prevent extra closing tags for components without children
     "react/self-closing-comp": 1,
     // Prevent missing parentheses around multilines JSX
-    "react/wrap-multilines": 1,
+    "react/jsx-wrap-multilines": 1,
 
     // style-centric rules below
     // enforce spacing inside array brackets
