--- a/package.json
+++ b/package.json
@@ -14,32 +14,35 @@
     "url": "git+https://github.com/FDA/open.fda.gov.git"
   },
   "dependencies": {
-    "babel-eslint": "8.0.1",
-    "babel-polyfill": "6.26.0",
-    "bluebird": "3.5.1",
-    "chart.js": "1.1.1",
+    "babel-eslint": "^10.1.0",
+    "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.7.2",
+    "chart.js": "^1.1.1",
     "classnames": "2.2.5",
     "copy-webpack-plugin": "4.2.0",
+    "core-js": "^3.8.0",
     "create-react-class": "15.6.3",
     "dateformat": "3.0.2",
-    "eslint": "6.8.0",
-    "eslint-config-react-tools": "1.1.2",
-    "eslint-plugin-babel": "4.1.2",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint": "^7.14.0",
+    "eslint-config-react-tools": "^1.1.7",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "file-saver": "1.3.3",
     "flow": "^0.2.3",
-    "gatsby": "^1.9.277",
-    "gatsby-link": "1.6.22",
-    "gatsby-plugin-react-helmet": "1.0.8",
-    "gatsby-plugin-stylus": "1.1.10",
-    "gatsby-remark-autolink-headers": "^1.4.11",
-    "gatsby-remark-copy-linked-files": "^1.5.22",
-    "gatsby-remark-prismjs": "^1.2.11",
-    "gatsby-remark-responsive-iframe": "^1.4.16",
-    "gatsby-remark-smartypants": "^1.4.10",
-    "gatsby-source-filesystem": "2.0.0-alpha.1",
-    "gatsby-transformer-remark": "1.7.24",
+    "gatsby": "^2.0.0",
+    "gatsby-link": "^2.7.0",
+    "gatsby-plugin-flow": "^1.6.0",
+    "gatsby-plugin-layout": "^1.6.0",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-stylus": "^2.6.0",
+    "gatsby-remark-autolink-headers": "^2.7.0",
+    "gatsby-remark-copy-linked-files": "^2.6.0",
+    "gatsby-remark-prismjs": "^3.9.0",
+    "gatsby-remark-responsive-iframe": "^2.7.0",
+    "gatsby-remark-smartypants": "^2.6.0",
+    "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-transformer-remark": "^2.12.0",
     "html-react-parser": "0.4.0",
     "immutability-helper": "^2.6.6",
     "jquery": "^3.2.1",
@@ -47,13 +50,18 @@
     "marked": "^0.6.2",
     "matchmedia": "^0.1.2",
     "nib": "^1.1.2",
+    "prismjs": "^1.22.0",
     "pondjs": "0.8.7",
+    "raw-loader": "^4.0.2",
     "rc-slider": "8.3.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-autosuggest": "^9.3.2",
-    "react-chartjs": "^0.8.0",
+    "react-chartjs": "^1.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-document-title": "^2.0.3",
-    "react-highlight": "^0.10.0",
+    "react-helmet": "^5.1.3",
+    "react-highlight.js": "^1.0.7",
     "react-joyride": "^2.0.5",
     "react-modal": "^3.1.0",
     "react-promise": "2.0.0",
@@ -69,7 +77,8 @@
     "recharts": "1.8.5",
     "scroll-into-view": "^1.9.1",
     "stylus": "^0.54.5",
-    "whatwg-fetch": "2.0.3",
+    "typescript": "^4.1.2",
+    "whatwg-fetch": "^3.5.0",
     "xlsx": "0.16.1"
   },
   "keywords": [
