--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "gatsby-remark-smartypants": "^2.6.0",
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-remark": "^2.12.0",
-    "html-react-parser": "0.4.0",
+    "html-react-parser": "^0.14.2",
     "immutability-helper": "^2.6.6",
     "jquery": "^3.5.1",
     "localforage": "^1.5.2",
-    "marked": "^0.7.0",
+    "marked": "^1.1.1",
     "matchmedia": "^0.1.2",
     "nib": "^1.1.2",
     "pondjs": "0.8.7",
