--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "classnames": "2.2.5",
     "copy-webpack-plugin": "4.2.0",
     "core-js": "^3.8.0",
-    "create-react-class": "15.6.3",
+    "create-react-class": "^15.7.0",
     "dateformat": "3.0.2",
     "eslint": "^7.14.0",
     "eslint-config-react-tools": "^1.1.7",
@@ -43,23 +43,23 @@
     "gatsby-remark-smartypants": "^2.6.0",
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-remark": "^2.12.0",
-    "html-react-parser": "0.4.0",
+    "html-react-parser": "^0.14.2",
     "immutability-helper": "^2.6.6",
-    "jquery": "^3.2.1",
+    "jquery": "^3.5.1",
     "localforage": "^1.5.2",
-    "marked": "^0.7.0",
+    "marked": "^1.1.1",
     "matchmedia": "^0.1.2",
     "nib": "^1.1.2",
-    "prismjs": "^1.22.0",
     "pondjs": "0.8.7",
+    "prismjs": "^1.22.0",
     "raw-loader": "^4.0.2",
     "rc-slider": "8.3.1",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2",
     "react-autosuggest": "^9.3.2",
     "react-chartjs-2": "^2.11.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-document-title": "^2.0.3",
+    "react-dom": "^16.4.2",
     "react-helmet": "^5.1.3",
     "react-highlight.js": "^1.0.7",
     "react-joyride": "^2.0.5",
@@ -69,7 +69,7 @@
     "react-select": "2.4.4",
     "react-sticky-state": "^2.1.9",
     "react-table": "6.9.0",
-    "react-timeseries-charts": "0.12.8",
+    "react-timeseries-charts": "^0.16.1",
     "react-tippy": "^1.2.3",
     "react-tooltip": "^3.9.2",
     "react-transition-group": "^2.2.1",
