--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-flow": "^1.6.0",
     "gatsby-plugin-layout": "^1.6.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-stylus": "^2.6.0",
     "gatsby-remark-autolink-headers": "^2.7.0",
     "gatsby-remark-copy-linked-files": "^2.6.0",
@@ -50,6 +51,7 @@
     "marked": "^1.1.1",
     "matchmedia": "^0.1.2",
     "nib": "^1.1.2",
+    "node-sass": "^4.14.1",
     "pondjs": "0.8.7",
     "prismjs": "^1.22.0",
     "raw-loader": "^4.0.2",
