Cypress integration and the first test for the home page.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ npm-debug.log.931881047
 .DS_Store
 .cache
 #package-lock.json
+/cypress/integration/examples/
+/cypress/support/
+/cypress/fixtures/
+/cypress/plugins/
+/cypress/videos/
