Bug fixes for Data Dictionary & Breadcrumbs.

--- a/src/constants/fields/master_fields.yaml
+++ b/src/constants/fields/master_fields.yaml
@@ -4764,6 +4764,7 @@ drug:
           drug:
             type: array
             items:
+              type: object
               properties:
                 actiondrug:
                   format: int64
