--- a/package.json
+++ b/package.json
@@ -93,6 +93,8 @@
   "main": "n/a",
   "devDependencies": {
     "cypress": "^6.6.0",
+    "cypress-multi-reporters": "^1.4.0",
+    "mocha-junit-reporter": "^2.0.0",
     "prettier": "^1.7.4",
     "start-server-and-test": "^1.11.7"
   }
