--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "gatsby-transformer-remark": "^2.12.0",
     "html-react-parser": "^0.14.2",
     "immutability-helper": "^2.6.6",
+    "jquery": "^3.5.1",
     "jsonexport": "^2.0.11",
     "loader-utils": "1.0.2",
-    "jquery": "^3.5.1",
     "localforage": "^1.5.2",
     "marked": "^1.1.1",
     "matchmedia": "^0.1.2",
@@ -64,8 +64,8 @@
     "react": "16.14.0",
     "react-autosuggest": "^9.3.2",
     "react-basic-table": "^1.0.14",
-    "react-collapsible": "^2.0.4",
     "react-chartjs-2": "^2.11.1",
+    "react-collapsible": "^2.0.4",
     "react-custom-scrollbars": "^4.2.1",
     "react-datetime": "^2.14.0",
     "react-day-picker": "^7.1.1",
@@ -77,7 +77,7 @@
     "react-modal": "^3.1.0",
     "react-promise": "2.0.0",
     "react-radio-group": "^3.0.2",
-    "react-select": "2.4.4",
+    "react-select": "^4.3.0",
     "react-simple-maps": "^2.3.0",
     "react-sticky-state": "^2.1.9",
     "react-table": "6.10.0",
