--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "author": "Jack Finch <jack.finch@semanticbits.com>",
   "scripts": {
-    "dev:site": "./node_modules/.bin/gatsby develop -H 0.0.0.0 -p 3000",
+    "dev": "./node_modules/.bin/gatsby develop -H 0.0.0.0 -p 3000",
     "build": "./node_modules/.bin/gatsby build --verbose",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'"
   },
