Updated community apps.

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -1,18 +1,12 @@
-- title: 'FDA Enforcement Reports'
-  url: 'https://truetandem-gsa.appspot.com/'
 - title: 'Find recalled food products in your state'
   url: 'http://esridc.github.io/openfda'
 - title: 'Local Alternatives'
   url: 'https://devis18f.herokuapp.com/'
-- title: 'Search Food Recalls'
-  url: 'https://acumen-gsa-prototype.herokuapp.com/#/search'
 - title: 'ResearchAE'
-  url: 'http://www.researchae.com/'
-- title: 'KnowRx'
-  url: 'https://play.google.com/store/apps/details?id=knowrx.knowrx'
-- title: 'TrackMy Implants'
-  url: 'http://trackmyimplants.com/trackmy-implants/'
+  url: 'https://www.researchae.com/'
 - title: 'OpenVigilFDA'
-  url: 'http://openvigil.pharmacology.uni-kiel.de/openvigilfda.php'
+  url: 'https://openvigil.pharmacology.uni-kiel.de/openvigilfda.php'
 - title: 'WIZMED'
-  url: 'http://www.wizmed.com/'
+  url: 'https://www.wizmed.com/'
+- title: 'EMERGENCY Recall ALERT Service'
+  url: 'https://emert.org'
