--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "copy-webpack-plugin": "4.2.0",
     "core-js": "^3.8.0",
     "create-react-class": "^15.7.0",
+    "date-fns": "^2.23.0",
     "dateformat": "3.0.2",
     "eslint": "^7.14.0",
     "eslint-config-react-tools": "^1.1.7",
