Cypress end-to-end tests (#205)
* Cypress integration and the first test for the home page.

* Added Cypress test run to Jenkinsfile.

* Added a test for the top menu bar.

* Fixed the homepage.spec.js and added a test for the Status page.

* Added a smoke test for the Stats page.

* Added a test for the Try the API page that basically checks the query explorer.

* Added a test for the Harmonization chart.

* Initial code for dataset pages tests.

* Extracted page loading and disclaimer acceptance code into a reusable function.

* Added a test for Example API Queries page.

* A test case for the Infographics (Interactive Chart) page.

* Cypress version upgrade.

* Adding `cy.wait` while trying to fix a CI failure that otherwise passes on a local Mac.

* Additional test cases.

* Drug Event test cases.

* Fixed test glitches.

* Drug Label tests.

* Added Drug NDC tests.

* Fixing `cy.click()` failed because the center of this element is hidden from view:

* Drug Enforcement tests.

* Drugs@FDA tests.

* Fixed a link inconsistency that was breaking the tests.

* Device 510K tests.

* Covered the rest of the dataset pages with tests.

* Added JUnit reporter.

* Fixing JUnit reporter.

* gitignore update

* Deprecating Travis since we are using Jenkins.

* Changing Jenkinsfile to run e2e tests in Docker agents.

* Changing Jenkinsfile to run e2e tests in Docker agents.

* Fixing `correctMkdir failed to make directory /.npm/_locks`

* Using 'cypress/base:14' image.

* Setting `CYPRESS_CACHE_FOLDER = "$HOME/cache/Cypress"`

* Now wiping out workspace before run.

* Moved `cleanWs` to `post`.

* Using `$WORKSPACE` for `HOME`

* JUnit collector should not fail on empty tests.

* Changed image; trying to fix `Error: Path must be absolute at App.c._setDefaultAppPaths (electron/js2c/browser_init.js:5:1330)`

* Changed image; trying to fix `Error: Path must be absolute at App.c._setDefaultAppPaths (ele

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ npm-debug.log.931881047
 .DS_Store
 .cache
 #package-lock.json
+/cypress/integration/examples/
+/cypress/fixtures/
+/cypress/plugins/
+/cypress/videos/
+/cypress/results/
+/cypress/screenshots/
+/.config/
+/.npm/
+/cache/Cypress/
+
