--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "dev": "./node_modules/.bin/gatsby develop -H 0.0.0.0 -p 3000",
     "build": "./node_modules/.bin/gatsby build --verbose",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'"
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "develop": "gatsby develop",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cy:open",
+    "test:e2e:ci": "start-server-and-test dev http://localhost:3000 cy:run"
   },
   "repository": {
     "type": "git",
@@ -88,6 +93,10 @@
   "license": "MIT",
   "main": "n/a",
   "devDependencies": {
-    "prettier": "^1.7.4"
+    "cypress": "^8.3.0",
+    "cypress-multi-reporters": "^1.5.0",
+    "mocha-junit-reporter": "^2.0.0",
+    "prettier": "^1.7.4",
+    "start-server-and-test": "^1.13.1"
   }
 }
