Added AVE to Community Apps.

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -10,3 +10,5 @@
   url: 'https://www.wizmed.com/'
 - title: 'EMERGENCY Recall ALERT Service'
   url: 'https://emert.org'
+- title: 'AVE'
+  url: 'https://adversevetevents.com/'
