--- a/src/constants/fields/master_fields.yaml
+++ b/src/constants/fields/master_fields.yaml
@@ -2961,6 +2961,12 @@ device:
     type: object
   recall:
     properties:
+      cfres_id:
+        description: "cfRes internal recall identifier"
+        format:
+        is_exact: false
+        possible_values:
+        type: string
       event_date_initiated:
         description: "Date that the firm first began notifying the public or their consignees of the recall."
         format: date
