Added https://recall.report/ to community apps.

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -12,3 +12,5 @@
   url: 'https://emert.org'
 - title: 'AVE'
   url: 'https://adversevetevents.com/'
+- title: 'Product Recall Tracker'
+  url: 'https://recall.report/'
