--- a/src/constants/fields/drugevent.yaml
+++ b/src/constants/fields/drugevent.yaml
@@ -284,6 +284,13 @@ properties:
                   '3': "Unknown"
             drugrecurrence:
               properties:
+                drugrecuractionmeddraversion:
+                  format:
+                  is_exact: true
+                  type: string
+                  pattern:
+                  description: "The version of MedDRA from which the term in `drugrecuraction` is drawn."
+                  possible_values:
                 drugrecuraction:
                   format:
                   is_exact: true
