package json hotfix

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "core-js": "^3.8.0",
     "create-react-class": "^15.7.0",
     "date-fns": "^2.23.0",
+    "d3-fetch": "^2.0.0",
+    "d3-scale": "^3.2.3",
     "dateformat": "3.0.2",
     "eslint": "^7.14.0",
     "eslint-config-react-tools": "^1.1.7",
@@ -74,6 +76,7 @@
     "react-promise": "2.0.0",
     "react-radio-group": "^3.0.2",
     "react-select": "2.4.4",
+    "react-simple-maps": "^2.3.0",
     "react-sticky-state": "^2.1.9",
     "react-table": "6.9.0",
     "react-timeseries-charts": "^0.14.0",
@@ -83,6 +86,7 @@
     "recharts": "1.8.5",
     "scroll-into-view": "^1.9.1",
     "typescript": "^4.1.2",
+    "victory": "^35.4.6",
     "whatwg-fetch": "^3.5.0",
     "xlsx": "0.16.1"
   },
