--- a/package.json
+++ b/package.json
@@ -4,85 +4,101 @@
   "version": "2.0.0",
   "author": "Jack Finch <jack.finch@semanticbits.com>",
   "scripts": {
-    "dev:css": "./node_modules/.bin/stylus -o ./src/css/build/app.css -I ./node-modules/nib ./src/css/app.styl",
-    "dev:site": "./node_modules/.bin/gatsby develop -H 0.0.0.0 -p 3000",
+    "dev": "./node_modules/.bin/gatsby develop -H 0.0.0.0 -p 3000",
     "build": "./node_modules/.bin/gatsby build --verbose",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'"
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "develop": "gatsby develop",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cy:open",
+    "test:e2e:ci": "start-server-and-test dev http://localhost:3000 cy:run"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FDA/open.fda.gov.git"
   },
   "dependencies": {
-    "babel-eslint": "8.0.1",
-    "babel-polyfill": "6.26.0",
-    "bluebird": "3.5.1",
-    "chart.js": "1.1.1",
+    "babel-eslint": "^10.1.0",
+    "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.7.2",
+    "chart.js": "^2.9.4",
     "classnames": "2.2.5",
     "copy-webpack-plugin": "4.2.0",
-    "create-react-class": "15.6.3",
+    "core-js": "^3.8.0",
+    "create-react-class": "^15.7.0",
+    "date-fns": "^2.23.0",
     "dateformat": "3.0.2",
-    "eslint": "6.8.0",
-    "eslint-config-react-tools": "1.1.2",
-    "eslint-plugin-babel": "4.1.2",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint": "^7.14.0",
+    "eslint-config-react-tools": "^1.1.7",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "file-saver": "1.3.3",
     "flow": "^0.2.3",
-    "gatsby": "^1.9.277",
-    "gatsby-link": "1.6.22",
-    "gatsby-plugin-react-helmet": "1.0.8",
-    "gatsby-plugin-stylus": "1.1.10",
-    "gatsby-remark-autolink-headers": "^1.4.11",
-    "gatsby-remark-copy-linked-files": "^1.5.22",
-    "gatsby-remark-prismjs": "^1.2.11",
-    "gatsby-remark-responsive-iframe": "^1.4.16",
-    "gatsby-remark-smartypants": "^1.4.10",
-    "gatsby-source-filesystem": "2.0.0-alpha.1",
-    "gatsby-transformer-remark": "1.7.24",
-    "html-react-parser": "0.4.0",
+    "gatsby": "^2.0.0",
+    "gatsby-link": "^2.7.0",
+    "gatsby-plugin-flow": "^1.6.0",
+    "gatsby-plugin-layout": "^1.6.0",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-plugin-stylus": "^2.6.0",
+    "gatsby-remark-autolink-headers": "^2.7.0",
+    "gatsby-remark-copy-linked-files": "^2.6.0",
+    "gatsby-remark-prismjs": "^3.9.0",
+    "gatsby-remark-responsive-iframe": "^2.7.0",
+    "gatsby-remark-smartypants": "^2.6.0",
+    "gatsby-source-filesystem": "^2.7.0",
+    "gatsby-transformer-remark": "^2.12.0",
+    "html-react-parser": "^0.14.2",
     "immutability-helper": "^2.6.6",
-    "jquery": "^3.2.1",
+    "jquery": "^3.5.1",
     "jsonexport": "^2.0.11",
     "loader-utils": "1.0.2",
     "localforage": "^1.5.2",
-    "marked": "^0.6.2",
+    "marked": "^1.1.1",
     "matchmedia": "^0.1.2",
     "moment": "2.20.1",
     "nib": "^1.1.2",
+    "node-sass": "^4.14.1",
     "pandas-js": "0.2.4",
     "pondjs": "0.8.7",
+    "prismjs": "^1.22.0",
+    "raw-loader": "^4.0.2",
     "rc-checkbox": "2.1.4",
     "rc-slider": "8.3.1",
+    "react": "^16.4.2",
     "react-autosuggest": "^9.3.2",
     "react-basic-table": "^1.0.14",
-    "react-chartjs": "^0.8.0",
+    "react-chartjs-2": "^2.11.1",
     "react-collapsible": "^2.0.4",
     "react-custom-scrollbars": "^4.2.1",
     "react-datetime": "^2.14.0",
     "react-day-picker": "^7.1.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "15.4.2",
-    "react-highlight": "^0.10.0",
+    "react-dom": "^16.4.2",
+    "react-helmet": "^5.1.3",
+    "react-highlight": "^0.14.0",
+    "react-highlight.js": "^1.0.7",
     "react-joyride": "^2.0.5",
     "react-modal": "^3.1.0",
     "react-promise": "2.0.0",
     "react-radio-group": "^3.0.2",
-    "react-select": "^1.2.1",
+    "react-select": "2.4.4",
     "react-sticky-state": "^2.1.9",
-    "react-table": "6.8.6",
-    "react-timeseries-charts": "0.12.8",
+    "react-table": "6.9.0",
+    "react-timeseries-charts": "^0.14.0",
     "react-tippy": "^1.2.3",
     "react-tooltip": "^3.9.2",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^7.1.0",
-    "recharts": "1.0.0-beta.0",
+    "recharts": "1.8.5",
     "scroll-into-view": "^1.9.1",
     "stylus": "^0.54.5",
+    "typescript": "^4.1.2",
     "victory": "0.26.1",
-    "whatwg-fetch": "2.0.3",
+    "whatwg-fetch": "^3.5.0",
     "with-query": "^1.1.2",
-    "xlsx": "^0.16.1"
+    "xlsx": "0.16.1"
   },
   "keywords": [
     "gatsby"
@@ -90,6 +106,10 @@
   "license": "MIT",
   "main": "n/a",
   "devDependencies": {
-    "prettier": "^1.7.4"
+    "cypress": "^9.2.1",
+    "cypress-multi-reporters": "^1.5.0",
+    "mocha-junit-reporter": "^2.0.2",
+    "prettier": "^1.19.1",
+    "start-server-and-test": "^1.14.0"
   }
 }
