--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "copy-webpack-plugin": "4.2.0",
     "core-js": "^3.8.0",
     "create-react-class": "^15.7.0",
+    "d3-fetch": "^2.0.0",
+    "d3-scale": "^3.2.3",
     "date-fns": "^2.23.0",
     "dateformat": "3.0.2",
     "eslint": "^7.14.0",
@@ -66,7 +68,7 @@
     "raw-loader": "^4.0.2",
     "rc-checkbox": "2.1.4",
     "rc-slider": "8.3.1",
-    "react": "^16.4.2",
+    "react": "16.14.0",
     "react-autosuggest": "^9.3.2",
     "react-basic-table": "^1.0.14",
     "react-chartjs-2": "^2.11.1",
@@ -75,7 +77,7 @@
     "react-datetime": "^2.14.0",
     "react-day-picker": "^7.1.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.4.2",
+    "react-dom": "16.14.0",
     "react-helmet": "^5.1.3",
     "react-highlight": "^0.14.0",
     "react-highlight.js": "^1.0.7",
@@ -83,10 +85,10 @@
     "react-modal": "^3.1.0",
     "react-promise": "2.0.0",
     "react-radio-group": "^3.0.2",
-    "react-select": "2.4.4",
+    "react-select": "^4.3.0",
     "react-sticky-state": "^2.1.9",
-    "react-table": "6.9.0",
-    "react-timeseries-charts": "^0.14.0",
+    "react-table": "6.10.0",
+    "react-timeseries-charts": "^0.16.1",
     "react-tippy": "^1.2.3",
     "react-tooltip": "^3.9.2",
     "react-transition-group": "^2.2.1",
@@ -95,7 +97,7 @@
     "scroll-into-view": "^1.9.1",
     "stylus": "^0.54.5",
     "typescript": "^4.1.2",
-    "victory": "0.26.1",
+    "victory": "^35.4.6",
     "whatwg-fetch": "^3.5.0",
     "with-query": "^1.1.2",
     "xlsx": "0.16.1"
