Enabled data for dev & fixed broken select.

--- a/src/pages/data/dataexplorer/_datasets.yaml
+++ b/src/pages/data/dataexplorer/_datasets.yaml
@@ -254,7 +254,7 @@ names:
             show: false
             showDefault: false
     endpoint: animalandveterinary/label.json
-    url: https://openfda-api.preprod.fda.gov
+    url: http://ec2-18-233-57-46.compute-1.amazonaws.com:8000
     filters:
       options:
         - label: Time Period
@@ -386,141 +386,6 @@ names:
           query_type: term
           autocomplete_field: application_number
           placeholder: E.g. ANADA200224
-          limit: 100
-    exportOptions:
-      - label: CSV
-      - label: JSON
-  adndc:
-    label: ADNDC
-    path: adndc
-    showChartView: true
-    showFormView: false
-    views:
-      tableView:
-        label:
-        searchType: nonLLT
-        help_text:
-          - "There are two ways to explore the Animal Drug Listing data: in a table or visualized in a variety of charts."
-          - "The default view is the table, which allows you to click on individual columns to sort the table by those results. The table displays 25 rows by default, but that number can be modified through a dropdown list. The next and previous buttons allow you to navigate through the all of the available data; you can also directly input what 'page' of data you'd like to view. The final major feature of the table view is the ability to export results in CSV or XLS format."
-          - "The chart view visualizes data in a bar chart which counts the total number of listings for whatever data element you select."
-          - "Both table and chart allow you to narrow down the results displayed through the use of the filter panel on the left side of the screen. Any number of filters may be applied and each will narrow down the data accordingly. After selecting your desired filters simply press the Apply Filters button in the middle of the screen. If you don't wish to apply those filters, press the Clear All button. After applying filters, they'll be displayed above the table or chart, and can be removed individually or as a whole; removing filters in either of these ways is done automatically without needing to press Apply Filters. Please note that some combinations of specific filters may result in no data matching the total filter criteria and no results being displayed."
-        show_collapse_rows_button: false
-        columns:
-          - Header: SPL ID
-            accessor: spl_id
-            show: true
-            showDefault: false
-          - Header: Product NDC
-            accessor: product_ndc
-            show: true
-            showDefault: true
-          - Header: Brand Name
-            accessor: brand_name
-            show: true
-            showDefault: true
-          - Header: Generic Name
-            accessor: generic_name
-            show: true
-            showDefault: true
-          - Header: Substance Name
-            accessor: substance_name
-            show: true
-            showDefault: true
-          - Header: Labeler Name
-            accessor: manufacturer_name
-            show: true
-            showDefault: true
-          - Header: Product Type
-            accessor: product_type
-            show: true
-            showDefault: true
-          - Header: Marketing Category
-            accessor: marketing_category
-            show: true
-            showDefault: true
-          - Header: Application Number
-            accessor: application_number
-            show: true
-            showDefault: true
-          - Header: Link
-            accessor: link
-            show: false
-            showDefault: true
-    endpoint: animalandveterinary/adndc.json
-    url: https://openfda-api.preprod.fda.gov
-    filters:
-      options:
-        - label: SPL ID
-          field: spl_id
-          autocomplete_field: spl_id
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select SPL ID
-          limit: 100
-        - label: Product NDC
-          field: product_ndc
-          autocomplete_field: product_ndc
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Product NDC
-          limit: 100
-        - label: Brand Name
-          field: brand_name.exact
-          autocomplete_field: brand_name
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Brand Name
-          limit: 100
-        - label: Generic Name
-          field: generic_name.exact
-          autocomplete_field: generic_name
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Generic Name
-          limit: 100
-        - label: Substance Name
-          field: substance_name.exact
-          autocomplete_field: substance_name
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Substance Name
-          limit: 100
-        - label: Labeler Name
-          field: manufacturer_name.exact
-          autocomplete_field: manufacturer_name
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Manufacturer Name
-          limit: 100
-        - label: Product Type
-          field: product_type.exact
-          autocomplete_field: product_type
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Product Type
-          limit: 100
-        - label: Marketing Category
-          field: marketing_category
-          autocomplete_field: marketing_category
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Brand
-          limit: 100
-        - label: Application Number
-          field: application_number
-          autocomplete_field: application_number
-          query_type: term
-          type: select_autocomplete
-          can_query: true
-          placeholder: Select Application Number
           limit: 100
     exportOptions:
       - label: CSV
