Various fixes and code style refactors.

--- a/src/pages/data/dataexplorer/_datasets.yaml
+++ b/src/pages/data/dataexplorer/_datasets.yaml
@@ -292,7 +292,7 @@ names:
         - label: Marketing Category
           type: checkbox
           query_type: prefix
-          field: marketing_category
+          field: marketing_category.exact
           options:
             - label: NADA
               value: NADA
