Updated device event names to support changes in final release.

--- a/static/fields/deviceevent.yaml
+++ b/static/fields/deviceevent.yaml
@@ -210,7 +210,7 @@ properties:
           is_exact: true
           possible_values:
           type: string
-        gudid_deviceid:
+        udi_di:
           description: "A unique numeric or alphanumeric code specific to a device version or model."
           format:
           is_exact: true
@@ -349,7 +349,7 @@ properties:
           is_exact: true
           possible_values:
           type: string
-        redacted_udi:
+        udi_public:
           description: "Includes both the UDI-DI and the parts of the Production identifier (PI) that would not identify an individual patient. The Production Identifier is  a conditional, variable portion of a UDI that identifies one or more of the following when included on the label of a device and may include: 1) lot or batch number within which a device was manufactured, 2) serial number of a specific device, 3) expiration date of a specific device, 4) date a specific device was manufactured, and 5) distinct identification code required by §1271.290(c) for a human cell, tissue, or cellular and tissue-based product (HCT/P) regulated as a device."
           format:
           is_exact: true
