--- a/src/pages/about/_content.yaml
+++ b/src/pages/about/_content.yaml
@@ -11,15 +11,13 @@
 - "## Who made openFDA?"
 - "openFDA is an initiative in the Office of Health Informatics (OHI) at the Food and Drug Administration. The core project team consists of the following individuals, in alphabetical order:"
 - ul:
-  - "Denis Krylov*"
-  - "Edmond Mulaire*"
-  - "Jack Finch*"
   - "John Giannantonio*"
-  - "Josh Smitherman*"
   - "Letria Hall"
-  - "Lonnie Smith"
-  - "Nag Kuchipudi*"
+  - "Z Knight"
   - "Patrick McConnell*"
+  - "Lonnie Smith"
+  - "Josh Smitherman*"
+  - "Violet Wren*"
 
 - "*_Contractor to OHI_"
 - "The team also wishes to thank the following individuals and groups for their contributions to the effort:"
@@ -64,3 +62,6 @@
   - "Carolyn Yancey"
   - "Kelemework Yimam"
   - "Ramakrishna Gundala"
+  - "Denis Krylov"
+  - "Edmond Mulaire"
+  - "Nag Kuchipudi*"
