Added Recalls.fyi to the Community Apps Page & removed defunct apps.

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -1,9 +1,5 @@
 - title: 'Find recalled food products in your state'
   url: 'http://esridc.github.io/openfda'
-- title: 'Local Alternatives'
-  url: 'https://devis18f.herokuapp.com/'
-- title: 'ResearchAE'
-  url: 'https://www.researchae.com/'
 - title: 'OpenVigilFDA'
   url: 'https://openvigil.pharmacology.uni-kiel.de/openvigilfda.php'
 - title: 'WIZMED'
@@ -14,3 +10,5 @@
   url: 'https://adversevetevents.com/'
 - title: 'Product Recall Tracker'
   url: 'https://recall.report/'
+- title: 'Recalls.fyi'
+  url: 'https://www.recalls.fyi'
