--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -412,6 +412,22 @@
           link: /apis/other/substance/download/
         - title: Searchable fields
           link: /apis/other/substance/searchable-fields/
+    - title: UNII
+      id: other-unii
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/other/unii/
+        - title: How to use the API
+          link: /apis/other/unii/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/other/unii/example-api-queries/
+        - title: Understanding the API Results
+          link: /apis/other/unii/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/other/unii/download/
+        - title: Searchable fields
+          link: /apis/other/unii/searchable-fields/
 
 - title: Tobacco API Endpoints
   id: tobacco-api-endpoints
